# side-stacker-game

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
artifacts/: side_stacker_value_net.pth
src/: setup.py
src/ssg/: __init__.py  constants.py  db.py  forms.py  run.py  schema.sql  ssg.db  utils.py
src/ssg/ai/: __init__.py  ai_player.py  analysis.py  heuristic.py  random.py  trained.py
src/ssg/ai/training/: nn.py  simulation.py  train.py
src/ssg/game/: __init__.py  board.py  engine.py  state.py
src/ssg/models/: __init__.py  game.py  move.py  player.py
src/ssg/static/: stylesheet.css
src/ssg/templates/: base.html  board.html  flash.html  game.html  history.html  index.html  miniboard.html  record.html  status.html
src/ssg/ws/: actions.py  broker.py
tests/: conftest.py
tests/test_game/: test_board.py  test_engine.py  test_state.py
tests/test_main/: test_http.py  test_ws.py
tests/test_models/: test_game.py  test_move.py  test_player.py
